# angular-grpc-example

./: .bazelrc  README.md  WORKSPACE  WORKSPACE.bazel  defs.bzl  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
api/: BUILD.bazel  hello_world.proto
applications/demo/: BUILD.bazel  main.ts
applications/demo/app/: app.component.html  app.component.ts  app.module.ts
proxy/: envoy.yaml
server/: BUILD.bazel  server.py
tools/: ng_proto_compile.bzl
tools/grpc/: BUILD.bazel  ng_proto_compile.bzl
